@@ -18,7 +18,7 @@ import lombok.extern.slf4j.Slf4j;
 
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 
 @Slf4j
@@ -103,7 +103,7 @@ public class GatewayService implements IGatewayService {
                     dto.setProcesoId(g.getProceso().getId());
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
